--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <div id="map"></div>
+            <div id="map">
+
+            </div>
           </div>
           <div class="col-md-6">
             <div id="info">
